--- a/examples/minimal/package.json
+++ b/examples/minimal/package.json
@@ -23,8 +23,6 @@
         "webpack-dev-server": "^4.9.0"
     },
     "dependencies": {
-        "d3": "^7.4.4",
-        "d3-geo": "^3.0.1",
-        "d3-tile": "^1.0.0"
+        "map-tile-fetch": "github:epigramai/map-tile-fetch"
     }
 }
